--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
     </div>
 
     <div class="arrow_down_container animated flip">
-      <i class="fa fa-arrow-circle-o-down fa-4x"></i>
+      <i class="fa fa-angle-double-down fa-4x"></i>
     </div>
   </div>
 
   <div class="top_button_container">
-    <a href="Resume.pdf" target="_blank"><button class="button_resume">Resume </button></a>
-    <button class="button_contact">Contact </button>
+    <a href="Resume.pdf" target="_blank"><button class="button">Resume </button></a>
+    <button class="button">Contact </button>
   </div>
 </section>
 
@@ -64,8 +64,8 @@
         <p> A crowdfunding web application for organizations and individuals
         looking to either raise funds or donate to charity bike rides. </p>
         <div class="ridestarter_button">
-          <a href="ridestarter.html"><button class="button_ridestarter">Case Study</button></a>
-          <a href="https://invis.io/Z2D6DKKTY" target="_blank"><button class="button_ridestarter">Prototype</button></a>
+          <a href="ridestarter.html"><button class="button_projects">Case Study</button></a>
+          <a href="https://invis.io/Z2D6DKKTY" target="_blank"><button class="button_projects">Prototype</button></a>
         </div>
       </div>
     </div>
@@ -77,8 +77,8 @@
         <h2> UX Research | UX Design | Responsive Web Design </h2>
         <p> A SaaS web application that allows users to collect information and store it in a centralized location.</p>
         <div class="simplebox_button">
-          <a href="simplebox.html"><button class="button_simplebox">Case Study</button></a>
-          <a href="https://invis.io/8PC2WA7AH" target="_blank"><button class="button_simplebox">Prototype</button></a>
+          <a href="simplebox.html"><button class="button_projects">Case Study</button></a>
+          <a href="https://invis.io/8PC2WA7AH" target="_blank"><button class="button_projects">Prototype</button></a>
         </div>
       </div>
     </div>
@@ -90,7 +90,7 @@
         <h2> UI Design | Brand Identity | Graphic Design </h2>
         <p> Other projects that includes user interface design, branding, and newsletter work. </p>
         <div class="more_projects_button">
-          <a href="more_projects.html"><button class="button_more">View Projects</button></a>
+          <a href="more_projects.html"><button class="button_projects">View Projects</button></a>
         </div>
       </div>
     </div>
@@ -129,7 +129,7 @@
   <div class="contact_container">
     <p> I love to connect and meet new people. Feel free to get in touch with me if you have
       opportunities for projects or open positions!</p>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSegqfUFqfZbNikQQFP_JDGc8hcajth3xduNM2hp5D2OuUd3BQ/viewform" target="_blank"><button class="button_touch">Get in touch</button></a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSegqfUFqfZbNikQQFP_JDGc8hcajth3xduNM2hp5D2OuUd3BQ/viewform" target="_blank"><button class="button">Get in touch</button></a>
   </div>
 </section>
 
