--- a/ridestarter.html
+++ b/ridestarter.html
@@ -31,7 +31,7 @@
   <div class="hero_overlay"> </div>
 
   <div class="arrow_back_container">
-    <a href="index.html"><i class="fa fa-arrow-circle-o-left fa-4x" style="color:white"></i></a>
+    <a href="index.html"><i class="fa fa-angle-double-left fa-4x" style="color:white"></i></a>
   </div>
 
   <div class="hero_container">
@@ -43,7 +43,7 @@
         looking to either raise funds or donate to charity bike rides.</p>
 
         <div class="arrow_down_container animated flip">
-          <i class="fa fa-arrow-circle-o-down fa-5x" style="color:white"></i>
+          <i class="fa fa-angle-double-down fa-4x" style="color:white"></i>
         </div>
     </div>
 
@@ -114,19 +114,18 @@
         <ul>
           <li>50% of respondents felt that the progress bar and fundraising are the most important
           features. </li>
+          <li> 61% of respondents say that they rarely donate.</li>
+          <li> 38.9% of respondents say that emotional videos will most likely make them want to donate. </li>
           <li>Some respondents felt the process of creating an account and going
           through the donation flow are a hassle that takes a toll of their time. </li>
-          <li>People usually don’t donate because they are sketpical of donation sites -
-          where the money is going to and how much of an impact they are making. Another
-          popular response is that they feel that their donation is too small to make a difference. </li>
           <li> When creating a campaign, 67% of respondents say that sharing their campaign through social media or email is the most
             important.
-          <li> 61% of respondents say that they rarely donate.
         </ul>
       </div>
 
-      <p>In addition to the survey, I also conducted user interviews on
-      people who have been on charity bike rides and have experienced through the fundraising process. These are my findings: </p>
+      <p>In addition to the survey, it was also important to conduct user interviews on people who
+        have been on charity bike rides and have experienced through the fundraising process.
+        These are my findings: </p>
 
       <div class="highlights">
         <ul>
@@ -139,8 +138,9 @@
       </div>
 
       <p> The data revealed the users' attitudes and motives towards donating. Based from the survey, there seems
-        to be major theme of users skeptical of whether they're making an impact through donation. From this inference, It was also safe to conclude that
-      users typically make a one time donation to friends or family. These results were important in deciding not only the features of Ridestarter, but also what
+        to be major theme of users skeptical of how exactly their money will make an impact.
+        From analyzing the survey, it was safe to conclude that users typically make a one-time donation to friends or family.
+        These results were important in deciding not only the features of Ridestarter, but also what
         was necessary in order to create a successful and trusting crowdfunding application.   </p>
       <img src="images/ridestarter/survey.png">
 
@@ -186,11 +186,13 @@
       </div>
 
       <div class="branding"> <b>Branding and Typography</b>
-        <p> With Ridestarter being a crowdfunding application, evoking trust is one of the
-          most important facets in getting users to use the site. Green is used as the primary color for
+        <p> With Ridestarter being a crowdfunding application, eliciting trust and emotion are the
+          most important facet in getting users to use the site. The color palette was comprised mainly of the color green. Green was used as the primary color for
           Ridestarter because not only green associates with money flow, but also promotes
-          a love for nature and foliages, which are all presented during a rider's journey. After careful consideration
-          about the logo, I went with the less is more principle and used typeface Noto Sans and a bike
+          a love for nature and foliages, which are all presented during a rider's journey. </p>
+
+        <p> The name Ridestarter was inspired by the crowdfunding site, Kickstarter.
+          After careful consideration about the logo, I went with the less is more principle and used typeface Noto Sans and a bike
           logo to evoke both professionalism and easy identification. </p>
 
         <img src="images/ridestarter/ridestarter_branding.png">
@@ -228,18 +230,17 @@
       <h1> Insights gained from usability testing</h1>
       <ul>
         <li> For the first set of user testings, I reached out to some of my colleagues
-          and and had them review my design in-person. Some of the feedback I receieved varied from things such as adjusting sizes
-          in certain elements or changing the wordings in the hero page.
+          and and had them review my design in-person. Some of the feedback I recieved varied from things such as adjusting sizes
+          in certain elements or changing the color of the call to action.
 
         <li> Some users pointed out that when they wanted to navigate back to
           My Account from the Creating a Fundraiser page, there were no option to do that unless you
           click on My Account on the navigation bar. To ensure a successful user experience, I added a back button both on the Creating a
           Fundraiser page and Guest Checkout page.  </li>
 
-         <li> An interesting observation was that one tester wanted to donate immediately
-           right after discovering it, but the click directs him to the description page instead.
-           I took this input and added a donate button under each project cards in both the homepage
-           and the discover page.</li>
+         <li> When user were donating, I noticed that there was a delay in deciding the donation amount. To speed up this process  , I added four
+           amount options for users to choose from ($5, $7, $10, $15)
+         </li>
 
           <li> In addition to testing in-person, I conducted an unmoderated remote usability testing on usertesting.com.
           The insight I gained from this method was valuable to eliminate any chance of biases. From the testing,
@@ -251,7 +252,10 @@
         </ul>
     </div>
 
-    <img src="images/ridestarter/ridestarter_video.png">
+    <div class="iteration_images">
+      <img src="images/ridestarter/button_iteration.png">
+      <p> Addressing the CTA's color and directory to charity page </p>
+    </div>
 
     </div>
   </div>
