--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <h2> UI Design | Brand Identity | Graphic Design </h2>
         <p> Other projects that includes user interface design, branding, and newsletter work. </p>
         <div class="more_projects_button">
-          <a href="more_projects.html"><button class="button_projects">View Projects</button></a>
+          <a href="more_projects.html"><button class="button_projects">More</button></a>
         </div>
       </div>
     </div>
