--- a/simplebox.html
+++ b/simplebox.html
@@ -32,7 +32,7 @@
   <div class="hero_overlay"> </div>
 
   <div class="arrow_back_container">
-    <a href="index.html"><i class="fa fa-arrow-circle-o-left fa-4x" style="color:white"></i></a>
+    <a href="index.html"><i class="fa fa-angle-double-left fa-4x" style="color:white"></i></a>
   </div>
 
   <div class="hero_container">
@@ -41,7 +41,7 @@
       <p>A web application that allows users to collect information and store it in a centralized location.<p/>
 
       <div class="arrow_down_container animated flip">
-        <i class="fa fa-arrow-circle-o-down fa-5x" style="color:white"></i>
+        <i class="fa fa-angle-double-down fa-5x" style="color:white"></i>
       </div>
     </div>
   </div>
