--- a/ridestarter.html
+++ b/ridestarter.html
@@ -238,8 +238,9 @@
           click on My Account on the navigation bar. To ensure a successful user experience, I added a back button both on the Creating a
           Fundraiser page and Guest Checkout page.  </li>
 
-         <li> When user were donating, I noticed that there was a delay in deciding the donation amount. To speed up this process  , I added four
-           amount options for users to choose from ($5, $7, $10, $15)
+         <li> When users were donating, I noticed that there was a delay in deciding the donation amount. To speed up this process, I added four
+           amount options for users to choose from ($5, $7, $10, $15). This also solves the pain point of users who are financially unfortunate by easing them
+           into fixed donation amounts that are not too high.
          </li>
 
           <li> In addition to testing in-person, I conducted an unmoderated remote usability testing on usertesting.com.
