--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
       <div class="simplebox_text">
         <h1> Simplebox </h1>
         <h2> UX Research | UX Design | Responsive Web Design </h2>
-        <p> A SaaS web application that allows users to collect information and store it in a centralized location.</p>
+        <p> A SaaS web application that allows users to collect information and store it in a centralized location. This app was created to solve
+          the clutterness in content-saving and produce a simple way to manage information.
+
+        </tbody></p>
         <div class="simplebox_button">
           <a href="simplebox.html"><button class="button_projects">Case Study</button></a>
           <a href="https://invis.io/8PC2WA7AH" target="_blank"><button class="button_projects">Prototype</button></a>
@@ -90,8 +93,18 @@
         <h2> UI Design | Brand Identity | Graphic Design </h2>
         <p> Other projects that includes user interface design, branding, and newsletter work. </p>
         <div class="more_projects_button">
-          <a href="more_projects.html"><button class="button_projects">More</button></a>
+          <a href="more_projects.html"><button class="button_projects">View More</button></a>
         </div>
+      </div>
+    </div>
+
+    <div class="gym">
+      <img src="images/gym.png" class="hvr-hang">
+      <div class="gym_text">
+        <h1> Gym App </h1>
+        <h2> Check back later or ask me about it! </h2>
+        <p> An IOS application that helps users find and locate gyms based on location, eliminating the pain of
+        arduous searches for a suitable gym online.  </p>
       </div>
     </div>
 
@@ -118,7 +131,7 @@
          <p> <b>I am ready to make my mark!</b> With a strong affinity for creating
          products that bridge the gap between technology, health, fitness, and environmental sustainability, I hope to strategize
          simple, yet user-centric solutions to solve complex problems. When I'm not working on UX related projects,
-         I enjoy hiking, traveling, hitting the gym, or catching up on Game of Thrones. Shoot me an email at <a href="mailto:ekkalux_414@berkeley.edu">
+         I enjoy hiking, traveling, hitting my personal record at the gym, or catching up on Game of Thrones. Shoot me an email at <a href="mailto:ekkalux_414@berkeley.edu">
           ekkalux_414@berkeley.edu</a> or get in touch with me right below! </p>
      </div>
   </div>
@@ -138,7 +151,7 @@
 
 <section class="footer">
   <div class="left_footer">
-    2017 Ekkalux Nguyen | All Rights Reserved.
+     © 2017 Ekkalux Nguyen | All Rights Reserved.
   </div>
 
   <div class="right_footer">
