--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <div class="simplebox_button">
           <a href="simplebox.html"><button class="button_projects">Case Study</button></a>
           <a href="https://invis.io/8PC2WA7AH" target="_blank"><button class="button_projects">Prototype</button></a>
+          <a href="https://ekkalux.github.io/simpleBox/" target="_blank"><button class="button_projects">Front-End</button></a>
         </div>
       </div>
     </div>
