--- a/index.html
+++ b/index.html
@@ -127,12 +127,14 @@
          want to just design; I wanted to use my passion in design to help people with their problems and see the
          positive effect it has upon their situation. My passion to be a UX designer grew when I stumbled across an
          intensive UI/UX design program, Bloc. Through this program, I have equipped myself with the necessary skills to discover,
-         plan, and deliver design solutions.
+         plan, and deliver design effective solutions.
 
          <p> <b>I am ready to make my mark!</b> With a strong affinity for creating
          products that bridge the gap between technology, health, fitness, and environmental sustainability, I hope to strategize
          simple, yet user-centric solutions to solve complex problems. When I'm not working on UX related projects,
-         I enjoy hiking, traveling, hitting my personal record at the gym, or catching up on Game of Thrones. Shoot me an email at <a href="mailto:ekkalux_414@berkeley.edu">
+         I enjoy hiking, traveling, hitting my personal record at the gym, or catching up on Game of Thrones. I'm huge on personal development so I'm always open to new opportunities
+         that help me maintain a good work-life balance.
+         Shoot me an email at <a href="mailto:ekkalux_414@berkeley.edu">
           ekkalux_414@berkeley.edu</a> or get in touch with me right below! </p>
      </div>
   </div>
@@ -142,7 +144,7 @@
   <h1> CONTACT </h1> <hr>
   <div class="contact_container">
     <p> I love to connect and meet new people. Feel free to get in touch with me if you have
-      opportunities for projects or open positions!</p>
+      opportunities for projects or open positions! I am also open to relocation. </p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSegqfUFqfZbNikQQFP_JDGc8hcajth3xduNM2hp5D2OuUd3BQ/viewform" target="_blank"><button class="button">Get in touch</button></a>
   </div>
 </section>
