--- a/ridestarter.html
+++ b/ridestarter.html
@@ -246,7 +246,7 @@
           <li> In addition to testing in-person, I conducted an unmoderated remote usability testing on usertesting.com.
           The insight I gained from this method was valuable to eliminate any chance of biases. From the testing,
           the user quickly identified the landing page as crowdfunding page for charity bike rides. Judging from the hero image,
-          the user thought that site is about a sporting company advertising their clothing brand. But later otherwise after reading some of the texts
+          the user thought that site is about a sporting company advertising their clothing brand. But later thought otherwise after reading some of the texts
           and scrolling down the page. After reviewing the landing page, users were then asked to make a donation starting from the homepage. As
           they navigate through a charity project, users liked the destination map as it gives them a visual idea of how far
           the ride would be. <a href="http://www.usertesting.com/v/0c0394a6-83ea-4a11-bedf-8691164ae105?encrypted_video_handle=ecowOnepaNaXBz98erLumg&shared=OLoy9ZlW" target='_blank'> View the video here!</a> </li>
@@ -291,9 +291,13 @@
       functionality of Ridestarter to create a good crowdfunding user experience. </p>
 
     </div>
+
+    <div class="arrow_up_container">
+      <i class="fa fa-angle-double-up fa-4x" style="color:black"></i>
+      <h1> Back to top </h1>
+    </div>
+
   </div>
-
-
 
 </section>
 
