--- a/simplebox.html
+++ b/simplebox.html
@@ -270,6 +270,11 @@
       homepage as mobile-first to ensure its responsiveness across different outlets. <a href="https://ekkalux.github.io/simpleBox/" target="_blank"> You can view the homepage development here </a> </p>
 
     <img src="images/simplebox/code.png">
+
+    <div class="arrow_up_container">
+      <i class="fa fa-angle-double-up fa-4x" style="color:black"></i>
+      <h1> Back to top </h1>
+    </div>
   </div>
 
 </section>
