--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <a href="Resume.pdf" target="_blank"><button class="button">Resume </button></a>
     <button class="button">Contact </button>
   </div>
-  
+
   <div class="hero_container">
     <h1>EKKALUX NGUYEN</h1>
     <p>I am a UX designer based in San Francisco passionate about
@@ -127,7 +127,7 @@
          want to just design; I wanted to use my passion in design to help people with their problems and see the
          positive effect it has upon their situation. My passion to be a UX designer grew when I stumbled across an
          intensive UI/UX design program, Bloc. Through this program, I have equipped myself with the necessary skills to discover,
-         plan, and deliver design effective solutions.
+         plan, and deliver effective design solutions.
 
          <p> <b>I am ready to make my mark!</b> With a strong affinity for creating
          products that bridge the gap between technology, health, fitness, and environmental sustainability, I hope to strategize
