--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <button class="button">About Me</button>
     </div>
 
-    <div class="arrow_down_container animated flip">
+    <div class="arrow_down_container">
       <i class="fa fa-angle-double-down fa-4x"></i>
     </div>
   </div>
