--- a/ridestarter.html
+++ b/ridestarter.html
@@ -42,9 +42,14 @@
       <p>A crowdfunding web application for organizations and individuals
         looking to either raise funds or donate to charity bike rides.</p>
 
-        <div class="arrow_down_container animated flip">
+        <div class="button_container">
+            <a href="https://invis.io/Z2D6DKKTY" target="_blank"><button class="button_projects">Prototype</button></a>
+        </div>
+
+        <div class="arrow_down_container">
           <i class="fa fa-angle-double-down fa-4x" style="color:white"></i>
         </div>
+
     </div>
 
   </div>
