--- a/simplebox.html
+++ b/simplebox.html
@@ -40,7 +40,12 @@
       <h1> SIMPLEBOX </h1>
       <p>A web application that allows users to collect information and store it in a centralized location.<p/>
 
-      <div class="arrow_down_container animated flip">
+      <div class="button_container">
+        <a href="https://invis.io/8PC2WA7AH" target="_blank"><button class="button_projects">Prototype</button></a>
+        <a href="https://ekkalux.github.io/simpleBox/" target="_blank"><button class="button_projects">Front-End</button></a>
+      </div>
+
+      <div class="arrow_down_container">
         <i class="fa fa-angle-double-down fa-5x" style="color:white"></i>
       </div>
     </div>
