--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <div class="project_container">
 
     <div class="ridestarter_container">
-      <img src="images/ridestarter_laptop.png" class="hvr-hang">
+      <img src="images/ridestarter_laptop.jpg" class="hvr-hang">
       <div class="ridestarter_text">
         <h1> Ridestarter </h1>
         <h2> UX Research | UX Design | Brand Identity </h2>
@@ -71,7 +71,7 @@
     </div>
 
     <div class="simplebox_container">
-      <img src="images/simplebox_cover.png" class="hvr-hang">
+      <img src="images/simplebox_cover.jpg" class="hvr-hang">
       <div class="simplebox_text">
         <h1> Simplebox </h1>
         <h2> UX Research | UX Design | Responsive Web Design </h2>
