--- a/ridestarter.html
+++ b/ridestarter.html
@@ -36,7 +36,6 @@
 
   <div class="hero_container">
 
-
     <div class="title_container">
       <h1> RIDESTARTER </h1>
       <p>A crowdfunding web application for organizations and individuals
@@ -272,7 +271,7 @@
     <p> With the insights gained from user research and usability testing, Ridestarter was solidified with
       multiple sought out iterations, transforming it into high-fidelity prototypes. <a href="https://invis.io/Z2D6DKKTY" target="_blank">
         You can check out Ridestarter's interactive prototype here. </a></p>
-    <img src="images/ridestarter/ridestarter_high.png">
+    <img src="images/ridestarter/ridestarter_high.jpg">
   </div>
 
 </section>
