revised for runkeeper

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <div class="hero_container">
     <h1>EKKALUX NGUYEN</h1>
-    <p>I am a UX designer based in San Francisco passionate about
+    <p>I am a UI/UX designer based in San Francisco passionate about
     creating beautiful and intuitive user experience. </p>
 
     <div class="middle_button_container">
