--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 
   <div class="top_button_container">
     <a href="Resume.pdf" target="_blank"><button class="button">Resume </button></a>
-    <button class="button">Contact </button>
+    <button class="button_contact">Contact </button>
   </div>
 
   <div class="hero_container">
     <h1>EKKALUX NGUYEN</h1>
     <p>I am a UI/UX designer based in San Francisco passionate about
-    creating beautiful and intuitive user experience. </p>
+    creating beautiful and intuitive user experiences. </p>
 
     <div class="middle_button_container">
       <button class="button">About Me</button>
@@ -87,6 +87,19 @@
       </div>
     </div>
 
+    <div class="gym">
+      <img src="images/gym.png" class="hvr-hang">
+      <div class="gym_text">
+        <h1> GymSeeker </h1>
+        <h2> Case study coming soon! </h2>
+        <p> An iOS application that helps users find and locate gyms based on location, eliminating the pain of
+        arduous searches for a suitable gym online.  </p>
+        <div class="gym_button">
+          <a href="https://invis.io/GMEND32KB" target="_blank"><button class="button_gym">Prototype</button></a>
+        </div>
+      </div>
+    </div>
+
     <div class="more_projects">
       <img src="images/more_projects/more_projects.png" class="hvr-hang">
       <div class="more_projects_text">
@@ -99,15 +112,6 @@
       </div>
     </div>
 
-    <div class="gym">
-      <img src="images/gym.png" class="hvr-hang">
-      <div class="gym_text">
-        <h1> Gym App </h1>
-        <h2> Check back later or ask me about it! </h2>
-        <p> An IOS application that helps users find and locate gyms based on location, eliminating the pain of
-        arduous searches for a suitable gym online.  </p>
-      </div>
-    </div>
 
 </section>
 
@@ -132,7 +136,7 @@
          <p> <b>I am ready to make my mark!</b> With a strong affinity for creating
          products that bridge the gap between technology, health, fitness, and environmental sustainability, I hope to strategize
          simple, yet user-centric solutions to solve complex problems. When I'm not working on UX related projects,
-         I enjoy hiking, traveling, hitting my personal record at the gym, or catching up on Game of Thrones. I'm huge on personal development so I'm always open to new opportunities
+         I enjoy hiking, traveling, hitting my personal records at the gym, or catching up on Game of Thrones. I'm huge on personal development so I'm always open to new opportunities
          that help me maintain a good work-life balance.
          Shoot me an email at <a href="mailto:ekkalux_414@berkeley.edu">
           ekkalux_414@berkeley.edu</a> or get in touch with me right below! </p>
