--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
   <h1> PROJECTS </h1> <hr>
   <div class="project_container">
 
+
     <div class="ridestarter_container">
       <img src="images/ridestarter_laptop.jpg" class="hvr-hang">
       <div class="ridestarter_text">
@@ -70,13 +71,26 @@
       </div>
     </div>
 
+    <div class="gym">
+      <img src="images/gym.png" class="hvr-hang">
+      <div class="gym_text">
+        <h1> GymSeeker </h1>
+        <h2> Case study in beta </h2>
+        <p> An iOS application that helps users find and locate gyms based on location, eliminating the pain of
+        arduous searches for a suitable gym online.  </p>
+        <div class="gym_button">
+          <a href="gym.html"><button class="button_projects">Case Study</button></a>
+          <a href="https://invis.io/GMEND32KB" target="_blank"><button class="button_gym">Prototype</button></a>
+        </div>
+      </div>
+    </div>
+
     <div class="simplebox_container">
       <img src="images/simplebox_cover.jpg" class="hvr-hang">
       <div class="simplebox_text">
         <h1> Simplebox </h1>
         <h2> UX Research | UX Design | Responsive Web Design </h2>
-        <p> A SaaS web application that allows users to collect information and store it in a centralized location. This app was created to solve
-          the clutterness in content-saving and produce a simple way to manage information.
+        <p> A SaaS web application that allows users to collect information and store it in a centralized location.
 
         </tbody></p>
         <div class="simplebox_button">
@@ -87,18 +101,7 @@
       </div>
     </div>
 
-    <div class="gym">
-      <img src="images/gym.png" class="hvr-hang">
-      <div class="gym_text">
-        <h1> GymSeeker </h1>
-        <h2> Case study coming soon! </h2>
-        <p> An iOS application that helps users find and locate gyms based on location, eliminating the pain of
-        arduous searches for a suitable gym online.  </p>
-        <div class="gym_button">
-          <a href="https://invis.io/GMEND32KB" target="_blank"><button class="button_gym">Prototype</button></a>
-        </div>
-      </div>
-    </div>
+
 
     <div class="more_projects">
       <img src="images/more_projects/more_projects.png" class="hvr-hang">
@@ -134,7 +137,7 @@
          plan, and deliver effective design solutions.
 
          <p> <b>I am ready to make my mark!</b> With a strong affinity for creating
-         products that bridge the gap between technology, health, fitness, and environmental sustainability, I hope to strategize
+         products that bridge the gap between technology, health, fitness, and entertainment, I hope to strategize
          simple, yet user-centric solutions to solve complex problems. When I'm not working on UX related projects,
          I enjoy hiking, traveling, hitting my personal records at the gym, or catching up on Game of Thrones. I'm huge on personal development so I'm always open to new opportunities
          that help me maintain a good work-life balance.
