--- a/ridestarter.html
+++ b/ridestarter.html
@@ -21,13 +21,11 @@
   gtag('config', 'UA-108806471-1');
 </script>
 
-
 </head>
 
 <body>
 
 <section class="hero">
-
   <div class="hero_overlay"> </div>
 
   <div class="arrow_back_container">
@@ -35,24 +33,18 @@
   </div>
 
   <div class="hero_container">
-
     <div class="title_container">
       <h1> RIDESTARTER </h1>
       <p>A crowdfunding web application for organizations and individuals
         looking to either raise funds or donate to charity bike rides.</p>
-
         <div class="button_container">
             <a href="https://invis.io/Z2D6DKKTY" target="_blank"><button class="button_projects">Prototype</button></a>
         </div>
-
         <div class="arrow_down_container">
           <i class="fa fa-angle-double-down fa-4x" style="color:white"></i>
         </div>
-
     </div>
-
   </div>
-
 </section>
 
 <nav class="navigation">
@@ -79,7 +71,7 @@
   </h4>
 
   <h4 class="deliver"> Methods <hr>
-    <p> UX Research, Contextual Interviews, Competitive Analysis, Usability testing </p>
+    <p> UX Research, Personas Contextual Interviews, Competitive Analysis, Usability Testing, User Stories, Wireframes </p>
   </h4>
 
   <h4 class="deliver"> Tools <hr>
@@ -184,7 +176,6 @@
           Creating an Account, Browsing a Charity, Donating to a Charity, and Creating a Campaign. This detaied information
         architecture serves as a template for the creation of the site. <a href="https://drive.google.com/file/d/0B0bktw2AN4LKaTg4d2pSb19PdWM/view?usp=sharing">
           Click here to view the online user flow. </a>  </p>
-
 
         <img src="images/ridestarter/user_flow.png">
       </div>
