--- a/gym.html
+++ b/gym.html
@@ -126,22 +126,21 @@
            <b>Click here to view the survey results. </b> </a> </p>
 
 
-
         <div class="highlights">
           <ul>
             <li> 48.8% of users ask for a day pass or free trial when commiting to a gym </li>
             <li> 51.2% of respondents are currently on a monthly membership plan </li>
             <li> 43.9% of respondents attested that the weight room is the most important amenity </li>
             <li> Location (85.4%), price (82.9%), and amenities/services (56.1%) are the three most important things when choosing a gym </li>
-            <li> What type of membership do they currently have </li>
+            <li> When asked what deters you from going ot the gym, most respondents answered exhaustion and overcrowding</li>
           </ul>
         </div>
 
         <img src="images/gymseeker/survey_findings.png">
 
-        <p> With the discoveries I found through my survey, I was able to determine the users' goals and pain points.
+        <p> With the discoveries I found through my survey, I was able to uncover the users' goals and pain points.
           It was clear that the main frustration with gyming has to do with convenience and time. With that said,
-           I wanted to ease the userss pain in finding a gym by providing
+           I wanted to ease the users' pain in finding a gym by providing
            them with essential gym elements such as price, location, and amenities.
       </div>
 
@@ -163,7 +162,7 @@
 
     <div class="user_flow"> <b>Information Architecture</b>
       <p> After getting a better insight of my users, I could move foward on user stories and user flows.
-      Basing off from the research, I created user stories and made four user flows that are essential to craft the important features and screens for
+      Basing off from the research, I created user stories and made four user flows that are essential to crafting the important features and screens for
     Gymseeker. <a href="https://docs.google.com/spreadsheets/d/123lRp0UdWpR_rVzesVuoIFh29WfpIlTxFjVp7_xMhrc/edit?usp=sharing" target="_blank">
     <b> Click here to view the user stories. </b> </a> </p>
 
@@ -183,8 +182,8 @@
     </div>
 
     <div class="low"> <b> Low-Fidelity Wireframes </b>
-      <p>With the completed user stories and user flows, I created low-fidelity mockups on Balsamiq and created clickable
-        prototypes on Invision. I tested the prototyes in-person with a few friends and. Some minor feedback includes making the filter button
+      <p>With the completed user stories and user flows, I created low-fidelity mockups on Balsamiq and transfer it to clickable
+        prototypes in Invision. I tested the prototyes in-person with a few friends and some people from my local gym. Some minor feedback includes making the filter button
         functional or changing the layout of certain elements. Taking in consideration of the feedback, I moved forward to creating high-fidelity wireframes. These
       are some of the initial sketches: </p>
 
@@ -236,7 +235,8 @@
 
       <p> The results indicated that users were able to successfully navigate to a different view and purchase a membership. This shows
       that the hiearchy is intuitively placed. What's interesting was that a few testers thought that the navigation icon is the list view,
-    commenting that the visual is similar to a list. While this may be true, the data indicates that majority of testers understood the list navigation.  </p>
+    commenting that the visual is similar to a list. While this may be true, the data indicates that majority of testers understood the flow to purchasing a membership
+      from an alternative view.</p>
 
   </div>
 </section>
@@ -244,11 +244,9 @@
 <section class="visual">
   <div class="visual_container">
     <h1>VISUAL DESIGN</h1> <hr>
-      <img src="images/gymseeker/visual.png">
+    <img src="images/gymseeker/visual.png">
   </div>
 </section>
-
-
 
 <section class="final">
   <div class="conclusion">
@@ -258,10 +256,12 @@
       As a fitness enthusiast who frequent the weight room, I have only considered
       locating gyms based on what types of equipments a gym has in their
       weight room. With Gymseeker, users are presented with a holistic detail of a gym's profile before
-      they make a commitment to gym.  </p>
+      making a commitment to purchasing a membership.  </p>
 
     <p> For this application, I delved deeper in the user testing process and made many iterations based on
-      feedback. In future development of the current product, I would consider </p>
+      feedback. In future development of the current product, I would consider an additional feature that allows users to
+    sort through the different types of gym - Yoga center, dance center, athlethic clubs, etc. This would provide users with a
+  comprehensive direction to filter through their fitness goals. </p>
 
     </div>
 
