--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <img src="images/ridestarter_laptop.jpg" class="hvr-hang">
       <div class="ridestarter_text">
         <h1> Ridestarter </h1>
-        <h2> UX Research | UX Design | Brand Identity </h2>
+        <h2> UX Research | Interaction Design | Brand Identity </h2>
         <p> A crowdfunding web application for organizations and individuals
         looking to either raise funds or donate to charity bike rides. </p>
         <div class="ridestarter_button">
@@ -75,7 +75,7 @@
       <img src="images/gym.png" class="hvr-hang">
       <div class="gym_text">
         <h1> GymSeeker </h1>
-        <h2> Case study in beta </h2>
+        <h2> UX Research | Interaction Design | Brand Identity </h2>
         <p> An iOS application that helps users find and locate gyms based on location, eliminating the pain of
         arduous searches for a suitable gym online.  </p>
         <div class="gym_button">
@@ -100,8 +100,6 @@
         </div>
       </div>
     </div>
-
-
 
     <div class="more_projects">
       <img src="images/more_projects/more_projects.png" class="hvr-hang">
@@ -138,8 +136,9 @@
 
          <p> <b>I am ready to make my mark!</b> With a strong affinity for creating
          products that bridge the gap between technology, health, fitness, and entertainment, I hope to strategize
-         simple, yet user-centric solutions to solve complex problems. When I'm not working on UX related projects,
-         I enjoy hiking, traveling, hitting my personal records at the gym, or catching up on Game of Thrones. I'm huge on personal development so I'm always open to new opportunities
+         simple, yet user-centric solutions to solve complex problems. When I'm not designing,
+         I enjoy hiking, traveling, hitting my personal records at the gym, having great conversations, and keeping up with the
+         latest UX trends. I'm huge on personal development so I'm always open to new opportunities
          that help me maintain a good work-life balance.
          Shoot me an email at <a href="mailto:ekkalux_414@berkeley.edu">
           ekkalux_414@berkeley.edu</a> or get in touch with me right below! </p>
